添加新的测试类